// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api Component should render correctly 1`] = `
<form
  action={undefined}
  className="ui success form"
  onSubmit={[Function]}
>
  <div
    className="fields"
  >
    <div
      className="required field"
    >
      <div
        className="ui input"
        content={undefined}
      >
        <input
          disabled={undefined}
          id="emailApi"
          name="email"
          onChange={[Function]}
          placeholder="Destination Email"
          required={true}
          tabIndex={undefined}
          type="email"
          value=""
        />
      </div>
    </div>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Send Email
    </button>
  </div>
  <div
    className="ui success message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Email Api Result
      </div>
      <p>
        result
      </p>
    </div>
  </div>
  <div
    className="ui error message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Error Sending Email
      </div>
    </div>
  </div>
</form>
`;

exports[`Api Component should render correctly with error 1`] = `
<form
  action={undefined}
  className="ui error success form"
  onSubmit={[Function]}
>
  <div
    className="fields"
  >
    <div
      className="required field"
    >
      <div
        className="ui input"
        content={undefined}
      >
        <input
          disabled={undefined}
          id="emailApi"
          name="email"
          onChange={[Function]}
          placeholder="Destination Email"
          required={true}
          tabIndex={undefined}
          type="email"
          value=""
        />
      </div>
    </div>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Send Email
    </button>
  </div>
  <div
    className="ui success message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Email Api Result
      </div>
      <p>
        result
      </p>
    </div>
  </div>
  <div
    className="ui error message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Error Sending Email
      </div>
      <p>
        error
      </p>
    </div>
  </div>
</form>
`;
